--- a/src/app/customer/signin-signup/signin-signup.component.html
+++ b/src/app/customer/signin-signup/signin-signup.component.html
@@ -104,12 +104,12 @@
               </select>
             </div>
             <div class="form-group">
-              <label for="zipcode">Zip Code</label>
+              <label for="zipCode">Zip Code</label>
               <input
                 type="number"
                 class="form-control"
-                formControlName="zipcode"
-                placeholder="Enter Zipcode"
+                formControlName="zipCode"
+                placeholder="Enter ZipCode"
               />
             </div>
             <!-- <div class="form-group">
