--- a/src/app/shared/layouts/footer/footer.component.css
+++ b/src/app/shared/layouts/footer/footer.component.css
@@ -1,8 +1,8 @@
 .container{
     margin-top: 15px;
     display: flex;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     margin-bottom: 10px;
     cursor:context-menu;
     
